--- a/index.html
+++ b/index.html
@@ -9,118 +9,150 @@
 </head>
 <body>
     <header>
-        <h1>Meu portal de notícias</h1>
-                <nav>
-            <ul>
-                <li>
-                    <a href="#sport" title="Ir para a seção de notícias">Esportes</a>
-                </li>
-                <li>
-                    <a href="#podcast" title="Ir para a seção de notícias">Podcast</a>
-                </li>
-                <li>
-                    <a href="#tecnologia" title="Ir para a seção de notícias">Tecnologia</a>
-                </li>                
-                <li>
-                    <a href="#economy" title="Ir para a seção de notícias">Economia</a>
-                </li>
-            </ul>
-        </nav>
+        <div class="container">
+            <h1>Meu portal de notícias</h1>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="#sport" title="Ir para a seção de notícias">Esportes</a>
+                    </li>
+                    <li>
+                        <a href="#podcast" title="Ir para a seção de notícias">Podcast</a>
+                    </li>
+                    <li>
+                        <a href="#tecnologia" title="Ir para a seção de notícias">Tecnologia</a>
+                    </li>                
+                    <li>
+                        <a href="#economy" title="Ir para a seção de notícias">Economia</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
     </header>
-    <section>
-        <h2>Esportes</h2>
-        <article>
-            <img src="./futebol.jpg" alt="Bola de futebol no gramado" />
-            <header>
-                <time>13/07/2022 às 12:35</time>
-            </header>
-            <h3>Grande clássico na noite de hoje</h3>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur consequuntur doloremque totam labore architecto. Corporis adipisci optio placeat quibusdam totam iure veritatis quam, ullam tenetur error? Laborum, modi itaque. Sunt.
-            </p>
-            <a href="#" title="Leia a notícia completa">Ler mais</a>
-        </article>
-        <article>
-            <img src="./futebol-americano.jpg" alt="Jogador de futebol americano correndo com a bola na mão" />
-            <header>
-                <time>13/07/2022 às 12:35</time>
-            </header>
-            <h3>Noite do Superbowl</h3>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur consequuntur doloremque totam labore architecto. Corporis adipisci optio placeat quibusdam totam iure veritatis quam, ullam tenetur error? Laborum, modi itaque. Sunt.
-            </p>
-            <a href="#" title="Leia a notícia completa">Ler mais</a>
-        </article>
-        <article>
-            <img src="./basquete.jpg" title="Vista aérea de uma quadra de basquete" />
-            <header>
-                <time>13/07/2022 às 12:35</time>
-            </header>
-            <h3>Notícia sobre a NBA</h3>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur consequuntur doloremque totam labore architecto. Corporis adipisci optio placeat quibusdam totam iure veritatis quam, ullam tenetur error? Laborum, modi itaque. Sunt.
-            </p>
-            <a href="#" title="Leia a notícia completa">Ler mais</a>
-        </article>
+    <section id="sports">
+        <div class="container">
+            <h2>Esportes</h2>
+            <div class="articles">
+                <article>
+                    <img src="./futebol.jpg" alt="Bola de futebol no gramado" />
+                    <header>
+                        <time class="creation-date">13/07/2022 às 12:35</time>
+                    </header>
+                    <h3>Grande clássico na noite de hoje</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur consequuntur doloremque totam labore architecto. Corporis adipisci optio placeat quibusdam totam iure veritatis quam, ullam tenetur error? Laborum, modi itaque. Sunt.
+                    </p>                        
+                    <a href="#" title="Leia a notícia completa">Ler mais</a>
+                </article>
+                <article>
+                    <div class="image">
+                        <img src="./futebol-americano.jpg" alt="Jogador de futebol americano correndo com a bola na mão" />
+                        <div class="overlay">
+                    <header>
+                        <time>13/07/2022 às 12:35</time>
+                    </header>
+                    <h3>Noite do Superbowl</h3>
+                    <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur consequuntur doloremque totam labore architecto. Corporis adipisci optio placeat quibusdam totam iure veritatis quam, ullam tenetur error? Laborum, modi itaque. Sunt.
+                    </p>
+                    <a href="#" title="Leia a notícia completa">Ler mais</a>
+                </article>
+                <article>
+                    <img src="./basquete.jpg" title="Vista aérea de uma quadra de basquete" />
+                    <header>
+                        <time>13/07/2022 às 12:35</time>
+                    </header>
+                    <h3>Notícia sobre a NBA</h3>
+                    <p> 
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur consequuntur doloremque totam labore architecto. Corporis adipisci optio placeat quibusdam totam iure veritatis quam, ullam tenetur error? Laborum, modi itaque. Sunt.
+                    </p>
+                    <a href="#" title="Leia a notícia completa">Ler mais</a>
+                </article>
+                <article>
+                    <img src="./basquete.jpg" title="Vista aérea de uma quadra de basquete" />
+                    <header>
+                        <time>13/07/2022 às 12:35</time>
+                    </header>
+                    <h3>Notícia sobre a NBA</h3>
+                    <p> 
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur consequuntur doloremque totam labore architecto. Corporis adipisci optio placeat quibusdam totam iure veritatis quam, ullam tenetur error? Laborum, modi itaque. Sunt.
+                    </p>
+                    <a href="#" title="Leia a notícia completa">Ler mais</a>
+                </article>    
+            </div>
         </section>
-        <section>
-        <h2>Economia</h2>
-        <article>
-            <img src="./dolares.jpg" alt="Muitos dólares" />
-            <header>
-                <time>13/07/2022 às 12:35</time>
-            </header>
-            <h3>Dólar em alta de 0.50%</h3>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur consequuntur doloremque totam labore architecto. Corporis adipisci optio placeat quibusdam totam iure veritatis quam, ullam tenetur error? Laborum, modi itaque. Sunt.
-            </p>
-            <a href="#" title="Leia a notícia completa">Ler mais</a>
-        </article>
-        <article>
-            <img src="./euro.jpg" alt="Várias notas de euro" />
-            <header>
-                <time>13/07/2022 às 12:35</time>
-            </header>
-            <h3>Euro em queda de 0.40%</h3>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur consequuntur doloremque totam labore architecto. Corporis adipisci optio placeat quibusdam totam iure veritatis quam, ullam tenetur error? Laborum, modi itaque. Sunt.
-            </p>
-            <a href="#" title="Leia a notícia completa">Ler mais</a>
-        </article>
-        <article>
-            <img src="./petroleo.jpg" alt="Extração de petróleo" />
-            <header>
-                <time>13/07/2022 às 12:35</time>
-            </header>
-            <h3>Alta no preço do barril do petróleo</h3>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur consequuntur doloremque totam labore architecto. Corporis adipisci optio placeat quibusdam totam iure veritatis quam, ullam tenetur error? Laborum, modi itaque. Sunt.
-            </p>
-            <a href="#" title="Leia a notícia completa">Ler mais</a>
-        </article>
-        <article>
-            <img src="podpah.jpg" alt=" podpah " />
-            <header>
-                <time>14/09/2023 às 10:18</time>
-            </header>
-            <h3>Maior podcast do brasil </h3>
-            <p>
-                Podpah é um podcast brasileiro apresentado por Igor Cavalari (Igão) e Thiago Marques (Mítico) em 2020. É considerado um dos maiores podcasts do país, com mais de 7 milhões de inscritos no YouTube
-            </p>
-            <a href="#" title="Leia a notícia completa">Ler mais</a>
-        </article>
-        <article >
-            <img src="iphone15.jpg" alt=" Lancamento iphone 15 " />
-            <header>
-                <time>14/09/2023 às 10:21</time>
-            </header>
-            <h3>Lançamento iphone 15 </h3>
-            <p>
-                O iPhone 15 foi lançado pela Apple nesta terça-feira (12), durante o evento "Wonderlust", em Cupertino, Califórnia (EUA). A nova geração de celulares trouxe ainda o iPhone 15 Plus e os modelos iPhone 15 Pro e iPhone 15 Pro Max, com os recursos de ficha técnica mais robustos da empresa. Além dos smartphones, foi apresentado o Apple Watch Series 9 e uma nova versão do Apple Watch Ultra.
-            </p>
-            <a href="#" title="Leia a notícia completa">Ler mais</a>
-        </article>
-        </article>
-    </section>
+        <section id="economy">  
+            <div class="container">    
+                <h2>Economia</h2>
+                <div class="articles">
+                    <article>
+                        <img src="./dolares.jpg" alt="Muitos dólares" />
+                        <header>
+                            <time>13/07/2022 às 12:35</time>
+                        </header>
+                        <h3>Dólar em alta de 0.50%</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur consequuntur doloremque totam labore architecto. Corporis adipisci optio placeat quibusdam totam iure veritatis quam, ullam tenetur error? Laborum, modi itaque. Sunt.
+                        </p>
+                        <a href="#" title="Leia a notícia completa">Ler mais</a>
+                    </article>
+                    <article>
+                        <img src="./euro.jpg" alt="Várias notas de euro" />
+                        <header>
+                            <time>13/07/2022 às 12:35</time>
+                        </header>
+                        <h3>Euro em queda de 0.40%</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur consequuntur doloremque totam labore architecto. Corporis adipisci optio placeat quibusdam totam iure veritatis quam, ullam tenetur error? Laborum, modi itaque. Sunt.
+                        </p>
+                        <a href="#" title="Leia a notícia completa">Ler mais</a>
+                    </article>
+                    <article>
+                        <img src="./petroleo.jpg" alt="Extração de petróleo" />
+                        <header>
+                            <time>13/07/2022 às 12:35</time>
+                        </header>
+                        <h3>Alta no preço do barril do petróleo</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur consequuntur doloremque totam labore architecto. Corporis adipisci optio placeat quibusdam totam iure veritatis quam, ullam tenetur error? Laborum, modi itaque. Sunt.
+                        </p>               
+                        <a href="#" title="Leia a notícia completa">Ler mais</a>
+                    </article>  
+                </div>
+            </section>
+            <section id="podcast">
+                <h2>PodCast</h2>  
+                <div class="container">
+                    <article>  
+                        <img src="podpah.jpg" alt=" podpah " />
+                        <header>
+                            <time>14/09/2023 às 10:18</time>
+                        </header>
+                        <h3>Maior podcast do brasil </h3>
+                        <p>
+                            Podpah é um podcast brasileiro apresentado por Igor Cavalari (Igão) e Thiago Marques (Mítico) em 2020. É considerado um dos maiores podcasts do país, com mais de 7 milhões de inscritos no YouTube
+                        </p>
+                        <a href="#" title="Leia a notícia completa">Ler mais</a>
+                    </article>
+                </div>
+            </section>
+            <section id="tecnologia">
+                <h2>Tecnologia</h2>  
+                <div class="container">
+                    <article>  
+                        <img src="iphone15.jpg" alt=" Lancamento iphone 15 " />
+                        <header>
+                            <time>14/09/2023 às 10:21</time>
+                        </header>
+                        <h3>Lançamento iphone 15 </h3>
+                        <p>
+                            O iPhone 15 foi lançado pela Apple nesta terça-feira (12), durante o evento "Wonderlust", em Cupertino, Califórnia (EUA). A nova geração de celulares trouxe ainda o iPhone 15 Plus e os modelos iPhone 15 Pro e iPhone 15 Pro Max, com os recursos de ficha técnica mais robustos da empresa. Além dos smartphones, foi apresentado o Apple Watch Series 9 e uma nova versão do Apple Watch Ultra.
+                        </p>
+                        <a href="#" title="Leia a notícia completa">Ler mais</a>
+                    </article>
+                </div>
+            </section>
+        </section>
+    </header>    
 </body>
 </html>
